# alyra-hearthstone-companion

./: .gitignore  DECK_EXAMPLES.md  Dockerfile  README.md  analysis.ipynb  pyproject.toml  train.ipynb
fastapi/: app.py
fastapi/utils/: adapter.py
notebooks/: analysis.ipynb  extract_card_names.ipynb  train_fnn_dense_layers.ipynb  train_linear_kernel.ipynb  train_logistic_regression.ipynb  train_random_forest.ipynb  train_stochastic_gradient_descent.ipynb
streamlit/: app.py
streamlit/utils/: adapter.py
streamlit/views/: 0_Machine_Learning.py  1_Deep_Learning.py  Home.py
