[tool.poetry]
name = "alyra-hearthstone-companion"
version = "0.1.0"
description = ""
authors = ["Varadiell <william.simonvezo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlcroissant = "^1.0.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
tensorflow = "^2.18.0"
joblib = "^1.4.2"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
